tests/baselines/reference/deleteOperator1.errors.txt
==== tests/cases/compiler/deleteOperator1.ts (1 errors) ====
    var a;
    var x: boolean = delete a;
    var y: any = delete a;
    var z: number = delete a;
        ~~~~~~~~~~~~~~~~~~~~
!!! deleteOperator1.ts(4,5): error TS2011: Cannot convert 'boolean' to 'number'.